# local-domjudge

./: README.md  chat record.md  requirement.md  specific.md
code/: requirement.md
docs/: CLI.md
examples/sample_problem/: meta.json
tools/ldj/: Cargo.toml  README.md
tools/ldj/src/: main.rs
