[package]
name = "ldj"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
rand = "0.8"
chacha20poly1305 = { version = "0.10", features = ["xchacha20"] }
ring = "0.16"
rpassword = "7.0"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.6"
